Adding manifest.json

--- a/images/manifest.json
+++ b/images/manifest.json
@@ -6,6 +6,63 @@
   "type" : "Manifest",
   "@context" : "http://iiif.io/api/presentation/3/context.json",
   "items" : [ {
+    "width" : 2048,
+    "id" : "https://iiif-test.github.io/Jan2022/images/image00049/canvas/",
+    "label" : {
+      "none" : [ "image00049" ]
+    },
+    "type" : "Canvas",
+    "items" : [ {
+      "id" : "https://iiif-test.github.io/Jan2022/images/image00049/AnnoPage/",
+      "type" : "AnnotationPage",
+      "items" : [ {
+        "motivation" : "Painting",
+        "id" : "https://iiif-test.github.io/Jan2022/images/image00049/annotation/",
+        "type" : "Annotation",
+        "body" : {
+          "service" : [ {
+            "tiles" : [ {
+              "scaleFactors" : [ 32, 16, 8, 4, 2, 1 ],
+              "width" : 1024,
+              "height" : 1024
+            } ],
+            "protocol" : "http://iiif.io/api/image",
+            "sizes" : [ {
+              "width" : 64,
+              "height" : 48
+            }, {
+              "width" : 128,
+              "height" : 96
+            }, {
+              "width" : 256,
+              "height" : 192
+            }, {
+              "width" : 512,
+              "height" : 384
+            }, {
+              "width" : 1024,
+              "height" : 768
+            }, {
+              "width" : 2048,
+              "height" : 1536
+            } ],
+            "profile" : "http://iiif.io/api/image/2/level0.json",
+            "width" : 2048,
+            "@id" : "https://iiif-test.github.io/Jan2022/images/image00049",
+            "@context" : "http://iiif.io/api/image/2/context.json",
+            "height" : 1536
+          } ],
+          "format" : "image/jpeg",
+          "width" : 2048,
+          "id" : "https://iiif-test.github.io/Jan2022/images/image00049/full/full/0/default.jpg",
+          "type" : "Image",
+          "height" : 1536
+        },
+        "target" : "https://iiif-test.github.io/Jan2022/images/image00049/canvas/"
+      } ]
+    } ],
+    "height" : 1536
+  }, {
     "width" : 4032,
     "id" : "https://iiif-test.github.io/Jan2022/images/IMG_9069/canvas/",
     "label" : {
